test/T3/Fail/UndeclaredUse.ic

class B{

	void c(){
		int a;
		a = b;
	}

	static void main(string[] args)
	{
	}
}
